--- a/frontend/src/app/shop-logo/shop-logo.component.css
+++ b/frontend/src/app/shop-logo/shop-logo.component.css
@@ -1,4 +1,12 @@
-.shop-logo {
+:host {
+  height: 100%;
   width: 100%;
-  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.shop-logo {
+  max-width: 100%;
+  max-height: 100%;
 }
